Fix overflow on Windows

--- a/src/react-app/src/styles/index.scss
+++ b/src/react-app/src/styles/index.scss
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  overflow-y: hidden;
+}
+
 .tooltip-container {
   min-width: 24rem;
   max-width: 40%;
